--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <name>WebsocketChat</name>
     <description>WebsocketChat</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>16</java.version>
+        <maven.compiler.target>16</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -71,6 +72,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>18</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -79,6 +85,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <arguments>
+                        <argument>--server.port=8081</argument>
+                    </arguments>
+                    <mainClass></mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
